# dualquat

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: approx_impls.rs  dual_quaternion.rs  from.rs  lib.rs  quaternion.rs  test_shared.rs  vec3.rs
tests/: integration_test.rs
