[package]
name = "dualquat"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Quaternion and Dual Quaternion math library for high-precision physics simulation"
repository = "https://github.com/knickish/dualquat"

[dependencies]
glam        = { version = "^0.21.0", optional = true }
nalgebra    = { version = "^0.31.0", optional = true, default-features = false }
nanoserde   = { version = "^0.1.30", optional = true }
serde       = { version = "^1.0.0", optional = true, features = ["derive"] }
speedy      = { version = "^0.8.0", optional = true }

[features]
"default"   = []
"nanoserde" = ["dep:nanoserde"]
"serde"     = ["dep:serde"]
"speedy"    = ["dep:speedy"]
"glam"      = ["dep:glam"]
"nalgebra"  = ["dep:nalgebra"]

[dev-dependencies]
pretty_assertions = "1"
nanorand = {version = "0.7.0"}
