[package]
name = "dualquat"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Quaternion and Dual Quaternion math library for high-precision physics simulation"
repository = "https://github.com/knickish/dualquat"

[dependencies]
glam        = { version = "^0.21.0", optional = true }
mint        = { version = "0.5.9", optional = true }
nalgebra    = { version = "^0.31.0", optional = true, default-features = false }
nanoserde   = { version = "^0.1.30", optional = true }
serde       = { version = "^1.0.0", optional = true, features = ["derive"] }
speedy      = { version = "^0.8.0", optional = true }

[features]
"default"   = []
"nanoserde" = ["dep:nanoserde"]
"serde"     = ["dep:serde"]
"speedy"    = ["dep:speedy"]
"glam"      = ["dep:glam"]
"nalgebra"  = ["dep:nalgebra"]
"mint"      = ["dep:mint"]

[dev-dependencies]
pretty_assertions = "1"
nanorand = "0.7.0"
serde_json = "1.0.87"